# grokking-algorithms

./: .editorconfig  .gitignore  Makefile  TODO.md  pyproject.toml
src/core/_common/base_structures/: __init__.py  abstract_list.py
src/core/_common/comparator/: __init__.py  comparator.py  int_comparator.py  product_by_id_comparator.py
src/core/_common/entities/: __init__.py  doubly_list_node.py  list_node.py
src/core/_common/search_strategy/: __init__.py  search_context.py  search_strategy.py
src/core/binary_search/: binary_search_v1_leet_code.py  binary_search_v2_clean_code.py  binary_search_v3_generic.py
src/core/binary_search/v1/: binary_search.py
src/domain/entities/: __init__.py  base_list.py  binary_search.py  doubly_list_node.py  list_node.py  product.py
src/domain/interfaces/: __init__.py  comparator.py
src/domain/types/: __init__.py
src/domain/value_objects/: __init__.py  int_comparator.py  product_by_id_comparator.py
src/infra/lists/: __init__.py  doubly_linked_list.py  linked_list.py
src/infra/searches/: __init__.py  iterative_binary_search.py  recursive_binary_search.py
tests/core/binary_search/: test_binary_search_v1.py  test_binary_search_v2.py  test_binary_search_v3.py  test_binary_search_v4.py
tests/core/linked_list/: test_linked_list_v1.py
tests/domain/entities/: test_doubly_list_node.py  test_list_node.py  test_product.py
tests/domain/value_objects/: test_int_comparator.py  test_product_by_id_comparator.py
tests/infra/lists/: test_lists.py
tests/infra/searches/: test_binary_search.py
(+13 files in other folders)
